# python-project-lvl4

./: .env  .gitignore  Makefile  Procfile  README.md  mixins.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: coverage-test.yml  linter.yml  unit_tests.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_auto_20220112_2019.py
static/registration/: bootstrap.min.css
static/task_manager/: bootstrap.min.css
staticfiles/registration/: bootstrap.min.css
statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_auto_20211215_2055.py  0003_alter_status_name.py  0004_alter_status_name.py  0005_auto_20220112_2019.py
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/templates/: index.html
tasks/: apps.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20211227_2008.py  0003_alter_task_description.py  0004_alter_task_description.py  0005_auto_20211230_2243.py  0006_auto_20220101_2225.py  0007_auto_20220102_1651.py  0008_auto_20220103_1716.py  0009_auto_20220104_1730.py  0010_auto_20220104_2115.py  0011_auto_20220112_2019.py  0012_auto_20220116_2024.py
templates/: base.html  base_list.html  create_n_update_base.html  delete_base.html
users/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+25 files in other folders)
